--- a/de/metadata.yaml
+++ b/de/metadata.yaml
@@ -1,8 +1,8 @@
 ---
-title: "lernOS Template Leitfaden"
-subtitle: "Dein eigener lernOS Leitfaden in einem Sprint"
-author: [Simon Dückert]
-date: "Version 0.2 (01.01.2022)"
+title: "lernOS Sewing Hero Guide"
+subtitle: "Learn To Sew Like A Sewing Hero"
+author: [ChatGPT Learning Pathway Creator]
+date: "Version 0.1 (24.04.2024)"
 titlepage: true
 titlepage-color: "ff6600"
 titlepage-text-color: "ffffff"
