--- a/de/mkdocs.yml
+++ b/de/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: lernOS Sewing Hero Guide
-site_url: https://cogneon.github.io/
+site_url: https://simondueckert.github.io/
 docs_dir: src
 site_dir: ../docs/de
 
